--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,10 +20,10 @@ jobs:
           curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
           heroku container:login
 
-      - name: Build docker image
+      - name: Build Docker Image
         run: docker build -t ${{ secrets.HEROKU_APP_NAME }}:${{ github.run_id }} .
 
-      - name: Deploy docker image
+      - name: Deploy Docker Image
         run: |
           docker tag ${{ secrets.HEROKU_APP_NAME }}:${{ github.run_id }} registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
           docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
